# basilisk

./: .gitignore  CMakeLists.txt  LICENSE  lib.c
cmake/: BasiliskConfig.cmake  CMakeBasiliskCompiler.cmake.in  CMakeBasiliskInformation.cmake  CMakeDetermineBasiliskCompiler.cmake  CMakeTestBasiliskCompiler.cmake
compiler/: CMakeLists.txt
compiler/include/: Builder.h  Compiler.h  Linker.h  Options.h
compiler/include/toml/: Toml.h
compiler/include/util/: Linker.h  Process.h
compiler/source/: Builder.cpp  Compiler.cpp  Linker.cpp  Options.cpp  main.cpp
examples/: array.bslk  bw.bslk  const.bslk  factorial.bslk  for.bslk  globals.bslk  infer.bslk  module.bslk  module2.bslk  nested_loops.bslk  sizeof.bslk  strlen.bslk  struct.bslk  test.bslk  while.bslk
framework/: CMakeLists.txt
framework/include/debug/: SourcePair.h
framework/include/diagnostic/: Diagnostic.h
framework/include/import/: ImportManager.h
framework/include/parser/: Parser.h
framework/include/parser/ast/: ASTNode.h
framework/include/parser/ast/expression/: BinaryExpression.h  BooleanLiteral.h  CallExpression.h  CastExpression.h  IntegerLiteral.h  LenExpression.h  MemberAccess.h  NullptrLiteral.h  SizeofExpression.h  SliceExpression.h  StringLiteral.h  UnaryExpression.h  VariableExpression.h
framework/include/parser/ast/global/: Function.h  GlobalVariableDeclaration.h  ImportStatement.h  StructDeclaration.h
framework/include/parser/ast/statement/: BreakStatement.h  CompoundStatement.h  ContinueStatement.h  ForStatement.h  IfStatement.h  ReturnStatement.h  VariableDeclaration.h  WhileStatement.h
framework/include/scope/: Scope.h
framework/include/type/: ArrayType.h  BooleanType.h  ErrorType.h  FunctionType.h  IntegerType.h  PendingType.h  PointerType.h  SliceType.h  StructType.h  Type.h  VoidType.h
framework/source/diagnostic/: Diagnostic.cpp
framework/source/import/: ImportManager.cpp
framework/source/lexer/: Lexer.vlex
framework/source/parser/: Parser.cpp
framework/source/parser/ast/: ASTNode.cpp
framework/source/parser/ast/expression/: BinaryExpression.cpp  BooleanLiteral.cpp  CallExpression.cpp  CastExpression.cpp  IntegerLiteral.cpp  LenExpression.cpp  MemberAccess.cpp  NullptrLiteral.cpp  SizeofExpression.cpp  SliceExpression.cpp  StringLiteral.cpp  UnaryExpression.cpp  VariableExpression.cpp
framework/source/parser/ast/global/: Function.cpp  GlobalVariableDeclaration.cpp  ImportStatement.cpp  StructDeclaration.cpp
framework/source/parser/ast/statement/: BreakStatement.cpp  CompoundStatement.cpp  ContinueStatement.cpp  ForStatement.cpp  IfStatement.cpp  ReturnStatement.cpp  VariableDeclaration.cpp  WhileStatement.cpp
framework/source/scope/: Scope.cpp
framework/source/type/: ArrayType.cpp  BooleanType.cpp  ErrorType.cpp  FunctionType.cpp  IntegerType.cpp  PendingType.cpp  PointerType.cpp  SliceType.cpp  StructType.cpp  Type.cpp  VoidType.cpp
testlib/: basilisk.toml
testlib/src/io/: io.bslk
testproj/: .gitignore  basilisk.toml
testproj/src/: main.bslk  oldmain.bslk  test.vas
testproj/src/test/: io.bslk  test.bslk
